# Tauri-DevBox

./: .gitignore  CLAUDE.md  DESIGN.md  README.en.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/superpowers/plans/: 2026-06-19-html-prototype.md
docs/superpowers/specs/: 2026-06-19-qrcode-tool-design.md
prototype/: index.html
scripts/: fix-dmg-icon.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/tools/: base64.rs  encoding.rs  hash.rs  image.rs  mod.rs  net.rs  password.rs  port.rs  qrcode.rs  url.rs  uuid.rs
src-tauri/tests/: clipboard.rs  fs_read.rs
src/api/: base64.ts  clipboard.ts  hash.ts  image.ts  net.ts  password.ts  port.ts  qrcode.ts  url.ts  uuid.ts
src/components/nav/: AsideNav.vue  NavGroup.vue  NavItem.vue  icons.ts
src/components/ui/: CodeArea.vue  GhostBtn.vue  PillBtn.vue  Switch.vue
src/layouts/: AppShell.vue
src/router/: index.ts
src/stores/: nav.ts
src/styles/: common.css  tokens.css
src/views/: Base64ImageView.vue  Base64TextView.vue  ConnectivityView.vue  EscapeView.vue  FormatConversionView.vue  HashView.vue  ImageCompressionView.vue  JsonView.vue  ListCompareView.vue  MarkdownView.vue  PasswordView.vue  PortView.vue  QrCodeView.vue  SettingsView.vue  SqlView.vue  UrlView.vue  UuidView.vue  WebSocketView.vue  XmlView.vue
