[package]
name = "devbox"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "DevBox"
path = "src/main.rs"

[lib]
name = "devbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
percent-encoding = "2.3"
qrcode = { version = "0.14", default-features = false, features = ["svg", "image"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif", "tiff", "webp", "pnm", "tga"] }
rqrr = "0.7"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
