[package]
name = "devbox"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "DevBox"
path = "src/main.rs"

[lib]
name = "devbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
percent-encoding = "2.3"
base64 = "0.22"
qrcode = { version = "0.14", default-features = false, features = ["svg", "image"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif", "tiff", "webp", "pnm", "tga"] }
rqrr = "0.7"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
netstat2 = "0.11"
sysinfo = "0.32"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
digest = "0.10"
rand = "0.8"
uuid = { version = "1.10", features = ["v4", "v7"] }

[dev-dependencies]
tauri = { version = "2.11.2", features = ["test"] }
